--- a/config.env
+++ b/config.env
@@ -1,15 +1,14 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 
 # RECOMMNED SETUP 
 ## Setup only Required Config & DATABASE_URL
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5689409625:AAF7OtfWpgbya7KopUqQMIf29Zllvt_zmjU"
+OWNER_ID = "1180968615"
+TELEGRAM_API = "5360874"
+TELEGRAM_HASH = "4631f40a1b26c2759bf1be4aff1df710"
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
