--- a/config.env
+++ b/config.env
@@ -16,7 +16,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://eihvipmembership:Tn70VKYx1lRn1sDJ@cluster123.2bwlj5f.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
