--- a/config.env
+++ b/config.env
@@ -19,18 +19,18 @@ AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1"
 DATABASE_URL = "mongodb+srv://eihvipmembership:Tn70VKYx1lRn1sDJ@cluster123.2bwlj5f.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
+IGNORE_PENDING_REQUESTS = "true"
 IS_TEAM_DRIVE = ""
 USE_SERVICE_ACCOUNTS = ""
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
 INDEX_URL = ""                                        # Not end with /
 STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "true"
 CMD_SUFFIX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "true"
 TGH_THUMB = ""                                        # Give Telegraph URL(graph.org) for Logs/File Thumbnail
 
 # TURN ON/OFF FUCTIONS
@@ -78,7 +78,7 @@ AUTHOR_URL = ""
 GD_INFO = ""
 
 # MULTI FORCE SUBSCRIBE
-FSUB_IDS = ""                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
+FSUB_IDS = "-1001709094876"                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
 
 # QBITORRENT
 BASE_URL = "https://ish-mirror-leech-bot.herokuapp.com"
@@ -121,7 +121,7 @@ laravel_session = ""                                  # laravel_session for SHAR
 TOTAL_TASKS_LIMIT = ""                                # Limit Total Max Task At a time (int value)
 USER_TASKS_LIMIT = ""                                 # Limit User Max Task At a time (int value)
 DAILY_TASK_LIMIT = ""                                 # Max task a user can do in one day (int value)
-STORAGE_THRESHOLD = ""                                # Free Space that must be left in bot (int value without GB/MB)
+STORAGE_THRESHOLD = "1"                                # Free Space that must be left in bot (int value without GB/MB)
 TORRENT_DIRECT_LIMIT = ""                             # Limit the size of torrent download (int value without GB/MB)
 ZIP_UNZIP_LIMIT = ""                                  # Limit the size of Zip/Unzip (int value without GB/MB)
 CLONE_LIMIT = ""                                      # Limit the size of Clone (int value without GB/MB)
@@ -146,7 +146,7 @@ SHOW_LIMITS_IN_STATS = ""                             #Default is false
 LIST_MODE = ""                                        # List/Seach Result in Telegraph/HTML/Tg_Direct (Default is Telegraph)
 
 # BRANDING
-CREDIT_NAME = "" 
+CREDIT_NAME = "@EVERYTHINGISHEREOO" 
 
 # DYNAMIC IMAGES
 PICS = ""                                             # Add multiple telgraph image links that are seperated by spaces
@@ -158,8 +158,8 @@ PIXABAY_CATEGORY = ""                                 # Put Category Name, Avail
 PIXABAY_SEARCH = ""                                   # Put Keyword to Download Images from Pixabay.com Limit : 100 characters
 
 # FONT STYLE
-NAME_FONT = ""                                        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
-CAPTION_FONT = ""                                     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "b"                                        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+CAPTION_FONT = "b"                                     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 # TEMPLATE ( Put in One Line )
 ANIME_TEMPLATE = "<b>{ro_title}</b>({na_title})\n<b>Format</b>: <code>{format}</code>\n<b>Status</b>: <code>{status}</code>\n<b>Start Date</b>: <code>{startdate}</code>\n<b>End Date</b>: <code>{enddate}</code>\n<b>Season</b>: <code>{season}</code>\n<b>Country</b>: {country}\n<b>Episodes</b>: <code>{episodes}</code>\n<b>Duration</b>: <code>{duration}</code>\n<b>Average Score</b>: <code>{avgscore}</code>\n<b>Genres</b>: {genres}\n<b>Hashtag</b>: {hashtag}\n<b>Studios</b>: {studios}\n\n<b>Description</b>: <i>{description}</i>"
