--- a/config.env
+++ b/config.env
@@ -81,7 +81,7 @@ GD_INFO = ""
 FSUB_IDS = "-1001709094876"                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
 
 # QBITORRENT
-BASE_URL = "https://ish-mirror-leech-bot.herokuapp.com"
+BASE_URL = "https://ishmirrorleechbot.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
