--- a/config.env
+++ b/config.env
@@ -68,7 +68,7 @@ LINK_LOGS = ""                                        # Must be Started with -10
 TG_SPLIT_SIZE = ""                                    # Each User can set its own using usetting
 EQUAL_SPLITS = ""                                     # Each User can Enable/Disable using usetting
 AS_DOCUMENT = ""                                      # Each User can Change Document/Media using usetting
-PAID_SERVICE = ""                                     # Default is False
+PAID_SERVICE = "true"                                     # Default is False
 TIMEZONE = "Asia/Kolkata"                             # Checkout for Different timezone list https://bit.ly/2JtQfVI
 
 # TELEGRAPH UI (graph.org)
