--- a/config.env
+++ b/config.env
@@ -54,8 +54,8 @@ BOT_PM = ""                                           # If this True/False any U
 FORCE_BOT_PM = ""                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
 
 # LEECH
-LEECH_LOG = ""                                        # Must be Started with -100xxxxxxx
-LEECH_LOG_URL = ""                                    # Use Invite link for PUBLIC/PRIVATE Leech log 
+LEECH_LOG = "-1001912371694"                                        # Must be Started with -100xxxxxxx
+LEECH_LOG_URL = "https://t.me/+vgmlMa9U7y0zMmRl"                                    # Use Invite link for PUBLIC/PRIVATE Leech log 
 LEECH_LOG_INDEXING = ""                               # Default is False make it True if you want leech file indexing in leech log channel
 
 # MIRROR
